# breseq-ext-cnv

./: CNOGProGraphs.R  CNOGProTest.R  LICENSE  README.md  correct_for_gc_percentage.R  environment.yml  pyproject.toml
src/CNery/: core.py  get_CNV.py
src/breseq_ext_cnv/: get_CNV.py
src/breseq_ext_cnv.egg-info/: PKG-INFO  SOURCES.txt
