[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tools.setuptools]
packages=["src"]
include-package-data = true

[project]
name = "CNery"
version = "1.0.0"
authors = [
	{name = "Pranesh Rao", email = "pranesh.rao@utexas.edu"},
	{name = "Jefferey Barrick", email = "jbarrick@utexas.edu"}
]
description = "An extension of breseq to determine copy number variations from coverage data"
readme="README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

dynamic = ["dependencies"]

# [tool.setuptools.dynamic]
# dependencies = {file = ["environment.yml"]}

[project.scripts]
CNery = "CNery.get_CNV:main"
